--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
+	testCompile('org.junit.jupiter:junit-jupiter-params:5.3.2')//possibly to remove
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')//possibly to remove
+	// https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest
+	testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
 }
