--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,8 @@ dependencies {
 	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')//possibly to remove
 	// https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest
 	testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+	//annotationProcessor 'org.projectlombok:lombok:1.18.8'
+
+
 }
