--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 	//annotationProcessor 'org.projectlombok:lombok:1.18.8'
+	compile group: 'io.reactivex', name: 'rxjava', version: '1.3.8'
 
 
 }
